src/stylesheets/app.scss
@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700);

html.podlove-subscribe {
  height: 100%;
}

body.podlove-subscribe {
  font-family: 'Roboto';
  margin: 0;
  overflow: hidden;
}

.podlove-subscribe *,
.podlove-subscribe *:before,
.podlove-subscribe *:after {
  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
}

#podlove-subscribe-button-iframe {
  height: 0;
  width: 0;
}

script.podlove-subscribe-button {
  display: none !important;
}

#podlove-subscribe-button,
.podlove-subscribe-button {
  background-clip: padding-box;
  -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
  border-radius: 2px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  border: 1px solid #456757;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-weight: bold;
  padding: 0;
  position: relative;
  text-shadow: 0 1px 0 rgba(0, 0, 1, .08);

  span {
    display: inline-block;
    left: 0;
    position: relative;
    text-align: center;
    top: -4px;
    width: 59px;
  }
}

#podlove-subscribe-button {
  text-align: center;

  &:before {
    background: url('../images/icon-small@2x.png') no-repeat;
    background-size: cover;
    content: '';
    display: inline-block;
    height: 14px;
    margin: 2px 0 0 2px;
    width: 12px;
  }
}

#podlove-subscribe-button.small {
  font-size: 10px;
  height: 18px;
  width: 75px;
}


#podlove-subscribe-button:hover,
.podlove-subscribe-button:hover {
  background-color: #75c39d;
}

#podlove-subscribe-button:active,
.podlove-subscribe-button:active {
  background-color: #61937b;
}

#podlove-subscribe-button.medium,
.podlove-subscribe-button.medium {
  -moz-box-shadow: inset 0 -2px 0 rgba(0,0,1,.2), inset 0 0 10px rgba(70,103,87,.32);
  -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,1,.2), inset 0 0 10px rgba(70,103,87,.32);
  box-shadow: inset 0 -2px 0 rgba(0,0,1,.2), inset 0 0 10px rgba(70,103,87,.32);
  font-size: 13px;
  height: 28px;
  padding: 4px;
  width: 95px;

  &:before {
    background: url('../images/icon-medium@2x.png') no-repeat;
    background-size: cover;
    height: 17px;
    margin: 1px 0 0 0;
    width: 15px;
  }

  span {
    top: -4px;
    width: 70px;
  }
}

#podlove-subscribe-button.big,
#podlove-subscribe-button.big-logo {
  border-width: 2px;
  -moz-box-shadow: 0 2px 0 rgba(0,0,1,.2), inset 0 -3px 0 rgba(0,0,1,.2);
  -webkit-box-shadow: 0 2px 0 rgba(0,0,1,.2), inset 0 -3px 0 rgba(0,0,1,.2);
  box-shadow: 0 2px 0 rgba(0,0,1,.2), inset 0 -3px 0 rgba(0,0,1,.2);
  font-size: 19px;
  height: 46px;
  padding: 4px;
  width: 151px;

  &:before {
    background: url('../images/icon-big@2x.png') no-repeat;
    background-size: cover;
    height: 27px;
    margin-top: 2px;
    width: 24px;
  }

  span {
    top: -6px;
    width: 112px;
  }
}

#podlove-subscribe-button.big-logo {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

#podlove-subscribe-button-logo {
  cursor: pointer;
  display: none;

  &:before {
    box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.3);
    display:block;
    content:'';
    position:absolute;
    width:100%;
    height:100%;
  }

  img {
    width: 100%;
  }
}

#podlove-subscribe-button.auto,
#podlove-subscribe-button.auto,
#podlove-subscribe-button.auto {
  width: 100%;
}

#podlove-subscribe-button-title {
  background-color: rgba(127, 127, 127, 0.6);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.3);
  color: #fff;
  display: none;
  font-family: 'Roboto';
  font-size: 14px;
  overflow-wrap: break-word;
  padding: 4px;
  text-align: center;
}

#podlove-subscribe-popup {
  background: rgba(0, 0, 0, 0.7);
  color: #fff;
  height: 100%;
  left: 0;
  margin: 0 auto;
  overflow-y: scroll;
  padding: 0;
  position: fixed;
  top: 0;
  vertical-align: middle;
  width: 100%;
  z-index: 99999;

  h1, h2 {
    font-family: Roboto;
    font-size: 20px;
    margin: 10px 0 0;
  }

  h2 {
    font-size: 16px;
  }

  #podlove-subscribe-popup-close-button,
  #podlove-subscribe-popup-help-button {
    background: #fff;
    border-radius: 50px;
    color: rgb(26, 26, 26);
    cursor: pointer;
    font-size: 20px;
    line-height: 8px;
    padding: 6px 6px 8px 6px;
    position: absolute;
    right: 15px;
    top: 10px;
    z-index: 10;
  }

  #podlove-subscribe-popup-help-button {
    font-size: 16px;
    font-weight: 700;
    left: 15px;
    padding-left: 7px;
    padding-top: 7px;
    width: 22px;

    .podlove-subscribe-back-button {
      display: none;
    }

    &.active {
      background: transparent;
      color: #fff;

      .questionmark {
        display: none;
      }

      .podlove-subscribe-back-button {
        display: inline;
        left: -10px !important;
        top: -10px !important;
      }
    }
  }

  #podlove-subscribe-button-help-panel {
    background: rgb(26, 26, 26);
    color: #fff;
    font-family: Roboto;
    font-weight: 300;
    font-size: 95%;
    height: calc(100% - 40px);
    left: -100%;
    overflow-y: auto;
    position: absolute;
    top: 40px;
    transition: all 0.3s ease-out;
    width: 100%;

    &.visible {
      left: 0;
    }

    .podlove-subscribe-button-help-panel-content {
      padding: 15px 25px;

      & > * {
        opacity: 0.8;
        text-align: left;
      }

      & > h2 {
        margin-top: 0 !important;
      }
    }
  }

  .podlove-subscribe-back-button {
    cursor: pointer;
    font-size: 14px;
    display: none;
    font-size: 24px;
    line-height: 26px;
    padding: 6px 10px 9px 9px;
    position: absolute;
    text-decoration: none;
    top: 10px;
  }

  #podlove-subscribe-popup-modal {
    background-color: rgba(255, 255, 255, 0.9);
    border-radius: 15px;
    box-shadow: 0 0 5px 0 #222;
    height: 460px;
    margin: -230px auto 0;
    padding: 10px 10px 25px;
    overflow: hidden;
    position: relative;
    top: 50%;
    width: 300px;

    .podlove-logo {
      display: inline-block;
      text-align: center;
      width: 100%;

      img {
        margin-top: 6px;
        width: 130px;
      }
    }

    button {
      text-transform: none;
    }

    #podlove-subscribe-popup-modal-inner {
      height: 100%;
      overflow: hidden;
      position: relative;

      h1 {
        margin: 0 0 15px;
      }

      h2 {
        margin: 15px 0 5px;
        text-align: left;
      }
    }
  }

  #podlove-subscribe-panel-podcast,
  #podlove-subscribe-panel-format,
  #podlove-subscribe-panel-type,
  #podlove-subscribe-panel-clients,
  #podlove-subscribe-panel-finish {
    background-color: #fff;
    color: #444;
    height: 100%;
    left: 100%;
    padding: 60px 20px 20px;
    position: absolute;
    top: 0;
    width: 100%;

    transition: all 0.2s linear;

    .top-bar {
      background: rgb(26, 26, 26);
      color: #fff;
      font-size: 18px;
      font-weight: 300;
      height: 40px;
      left: 0;
      padding: 7px 0 0 10px;
      position: absolute;
      text-align: center;
      top: 0;
      width: 100%;
      z-index: 1;

      .podlove-subscribe-back-button {
        cursor: pointer;
        font-size: 30px;
        font-family: Roboto;
        font-weight: 300;
        left: 0px;
        position: absolute;
        text-align: center;
        top: -2px;
        width: 40px;
      }
    }

    .top-bar img,
    .top-bar .panel-title {
      position: relative;
      left: -5px
    }

    .top-bar img {
      height: 26px;
      margin: 0;
      opacity: 0.6;
    }

    .top-bar .panel-title {
      line-height: 26px;
      opacity: 0.8;
      vertical-align: top;
    }

  }

  #podlove-subscribe-panel-podcast {
    font-size: 14px;
    left: 0;
    padding-bottom: 0;
    text-align: center;

    img.podcast-cover {
      height: 150px;
      width: 150px;
    }
  }

  #podlove-subscribe-panel-podcast,
  #podlove-subscribe-panel-finish {
    .podlove-subscribe-button {
      -moz-box-shadow: 0 1px 0 rgba(0,0,1,.2), inset 0 -6px 0 rgba(0,0,1,.2);
      -webkit-box-shadow: 0 1px 0 rgba(0,0,1,.2), inset 0 -6px 0 rgba(0,0,1,.2);
      box-shadow: 0 1px 0 rgba(0,0,1,.2), inset 0 -6px 0 rgba(0,0,1,.2);
      border: 1px solid #456757;
      border-radius: 0;
      bottom: 0;
      color: #fff;
      font-size: 18px;
      height: 50px;
      left: 0;
      margin: 0 0 5% 5%;
      outline: none;
      position: absolute;
      text-decoration: none;
      width: 90%;
    }
  }

  #podlove-subscribe-panel-finish {
    .podlove-subscribe-button {
      padding: 8px 0;
      position: relative;
    }
  }

  #podlove-subscribe-panel-clients {
    padding-left: 0;
    padding-right: 0;
    padding-top: 50px;

    .top-bar .podlove-subscribe-back-button {
      display: block;
    }

    .device-cloud-switch {
      text-align: center;
      margin-bottom: 10px;

      button {
        background: #fff;
        border-bottom-left-radius: 3px;
        border-top-left-radius: 3px;
        border: 1px solid rgb(26, 26, 26);
        color: rgb(26, 26, 26);
        cursor: pointer;
        font-size: 12px;
        font-weight: normal;
        height: 27px;
        margin: 0;
        outline: none;
        padding: 5px;
        position: relative;
        right: -2px;
        text-transform: none;
        top: -1px;
        width: 65px;
      }

      button + button {
        border-radius: 0;
        border-top-right-radius: 3px;
        border-bottom-right-radius: 3px;
        left: -3px;
      }

      button.active {
        background: rgb(26, 26, 26);
        color: #fff;
      }
    }

    .client-list {
      height: 341px;
      overflow-y: auto;
    }

    ul {
      margin: 0;
      padding: 0;
    }

    ul.cloud-clients {
      display: none;
    }

    li {
      font-size: 22px;
      list-style: none;
      position: relative;
      text-align: left;
    }

    li:hover {
      background: #328398;
      color: #fff;
      cursor: pointer;
    }

    li img {
      height: 30px;
      left: 20px;
      position: absolute;
    }

    li a {
      border: none;
      color: inherit;
      display: block;
      padding: 8px 20px 8px 60px;
      text-decoration: none;
    }

    li button {
      color: inherit;
      display: block;
      padding: 8px 20px 8px 60px;
      text-decoration: none;
    }
  }

  #podlove-subscribe-panel-finish {
    font-size: 14px;
    text-align: center;

    .top-bar .podlove-subscribe-back-button {
      display: block;
    }

    img {
      margin-top: 30px;
      margin-bottom: 30px;
      max-width: 100px;
    }

    a {
      color: inherit;
    }

    input {
      font-size: 16px;
      height: 40px;
      width: 100%;
    }

    .store-button {
      margin: 5px 0 0;
      max-width: 50%;
    }
  }

  #podlove-subscribe-list {
    display: block;
    left: 0;
    margin: 0;
    padding: 0;

    li {
      list-style: none;
      margin: 0 auto;
      padding: 5px 15px;
      position: relative;
      z-index: 10;

      &:hover {
        background-color: rgb(243, 87, 1);

        &:after {
          left: 100%;
          top: 50%;
          border: solid transparent;
          content: " ";
          height: 0;
          width: 0;
          position: absolute;
          pointer-events: none;
        }

        &:after {
          border-color: rgba(136, 183, 213, 0);
          border-left-color: rgb(243, 87, 1);
          border-width: 24px;
          margin-top: -24px;
        }
      }

      & + li {
        margin-top: 5px;
      }

      a {
        color: #fff;
        display: block;
        line-height: 24px;
        text-decoration: none;
      }

      img {
        height: 32px;
        margin-right: 10px;
        position: relative;
        top: 4px;
      }

      span {
        position: relative;
        top: -5px;
      }
    }
  }

  .podlove-subscribe-link-input {
    input {
      border: 1px solid #444;
      border-radius: 3px;
      margin-left: -3px;
      padding: 10px 5px;
      width: 98%;
    }
  }
}

